Fix: CSS alignment...:

--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,7 @@
     height: 60px;
     width: 60px;
     color: black;
+    background-color: rgb(6, 6, 7);
 }
 
 .piece {
